<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_menu_equalizer"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equalizer"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_equalizer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_menu_settings"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_menu_about"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_info" />

</LinearLayout>
